@@ -25,6 +25,7 @@
 		<target-platform>cdt-e4.4</target-platform>
 		<help-docs-eclipserun-repo>http://download.eclipse.org/eclipse/updates/4.4</help-docs-eclipserun-repo>
 		<tycho.scmUrl>scm:git:git://git.eclipse.org/gitroot/cdt/org.eclipse.cdt.git</tycho.scmUrl>
+		<base.test.vmargs>-Xms256m -Xmx512m -XX:MaxPermSize=256m -ea</base.test.vmargs>
 	</properties>
 
 	<licenses>
@@ -251,7 +252,7 @@
 				</os>
 			</activation>
 			<properties>
-				<base.ui.test.vmargs>-XstartOnFirstThread</base.ui.test.vmargs>
+				<base.ui.test.vmargs>${base.test.vmargs} -XstartOnFirstThread</base.ui.test.vmargs>
 			</properties>
 		</profile>
 		<profile>
@@ -262,7 +263,7 @@
 				</os>
 			</activation>
 			<properties>
-				<base.ui.test.vmargs></base.ui.test.vmargs>
+				<base.ui.test.vmargs>${base.test.vmargs}</base.ui.test.vmargs>
 			</properties>
 		</profile>
 		<profile>
